<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_for_all"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="29"
        android:orientation="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_for_all"
            android:layout_weight="1"
            android:text="@string/b_add_score"/>

        <Button
            android:id="@+id/b_delete_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_for_all"
            android:layout_weight="1"
            android:text="@string/b_delete_score"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_for_all"
            android:layout_weight="1"
            android:text="@string/b_send_money" />

        <Button
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_for_all"
            android:layout_weight="1"
            android:text="@string/b_history" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/padding_for_all">

        <Button
            android:id="@+id/b_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_settings_name"></Button>
    </LinearLayout>

</LinearLayout>
    